fixing alignment

--- a/railways/src/Components/Schedule.css
+++ b/railways/src/Components/Schedule.css
@@ -63,6 +63,7 @@
 .train_no {
   display: flex;
   align-items: center;
+  margin-right: 2rem;
 }
 
 @media (max-width: 800px) {
